# grinder

esp32/grinder/components/micropy/: CMakeLists.txt
esp32/grinder/components/micropy/extmod/: extmod.cmake
esp32/grinder/components/micropy/mpy-cross/: mpy-cross.map
esp32/grinder/components/micropy/my_packages/hello/: __init__.py  say.py
esp32/grinder/components/micropy/my_packages/hello/lang/: __init__.py  say_lang.py
esp32/grinder/components/micropy/ports/esp32/: micropy.c  micropy.h
esp32/grinder/components/micropy/ports/esp32/boards/: manifest.py
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/: .bin_timestamp  CMakeCache.txt  Makefile  cmake_install.cmake  config.env  flash_app_args  flash_args  flasher_args.json  frozen_content.c  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json  sdkconfig  x509_crt_bundle.S
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/bootloader/: .bin_timestamp  CMakeCache.txt  Makefile  bootloader.elf  bootloader.map  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/bootloader-prefix/tmp/: bootloader-cfgcmd.txt
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/bootloader/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/bootloader/esp-idf/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/app_trace/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/app_update/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/asio/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/bootloader/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/bootloader_support/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/bt/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/cbor/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/cmock/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/coap/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/console/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/cxx/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/driver/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/efuse/: Makefile
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp-tls/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp32/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_adc_cal/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_common/: Makefile
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_eth/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_event/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_gdbstub/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_hid/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_http_client/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_http_server/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_https_ota/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_https_server/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_hw_support/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_ipc/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_lcd/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_local_ctrl/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_netif/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_phy/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_pm/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_ringbuf/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/esp_rom/: Makefile  cmake_install.cmake
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/esp-idf/hal/: Makefile
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/frozen_mpy/: _boot.mpy  apa106.mpy  dht.mpy  flashbdev.mpy  inisetup.mpy  ntptime.mpy  onewire.mpy  upip.mpy  upip_utarfile.mpy  webrepl.mpy  webrepl_setup.mpy  websocket_helper.mpy
esp32/grinder/components/micropy/ports/esp32/build-GENERIC/genhdr/: moduledefs.collected  moduledefs.collected.hash  moduledefs.h  qstrdefs.collected.h  qstrdefs.collected.h.hash  qstrdefs.generated.h  qstrdefs.preprocessed.h
esp32/grinder/components/micropy/ports/esp32/modules/: _boot.py  inisetup.py
(+209 files in other folders)
